--- a/reports/a-report.Rmd
+++ b/reports/a-report.Rmd
@@ -44,6 +44,15 @@ dados %>%
     gather(key = "Número", value = "Valor") %>% 
     knitr::kable()
 
+dados %>% filter(eleito == TRUE) %>% 
+    summarise(
+        `Total de eleitos` = n(),
+        `Conseguimos email` = sprintf("%d (%.1f%%)", sum(recebeu), 100* sum(recebeu) / n()),
+        `Responderam` = sprintf("%d (%.1f%%)", sum(respondeu), 100*sum(respondeu) / sum(recebeu)), 
+    ) %>% 
+    gather(key = "Número", value = "Valor") %>% 
+    knitr::kable()
+
 ```
 
 ## Nosso progresso
