textos e revisão dos gráficos

--- a/reports/a-report.Rmd
+++ b/reports/a-report.Rmd
@@ -29,9 +29,9 @@ paleta = c("#404E4D",
 ```{r read, warning=FALSE}
 
 #dados <- read_projectdata()
-eleitos <- read_csv("~/Documentos/vozativa-relatorios/data/eleitos.csv", col_types = cols(
+eleitos <- read_csv("../data/eleitos.csv", col_types = cols(
         eleito = col_logical()))
-dados <- read_csv("~/Documentos/vozativa-relatorios/data/estado-dos-candidatos.csv", 
+dados <- read_csv("../data/estado-dos-candidatos.csv", 
     col_types = cols(candidaturas = col_double(), 
         eleito = col_logical(), recebeu = col_logical(), 
         respondeu = col_logical(),date_modified = col_datetime(format = ""),
@@ -80,18 +80,21 @@ eleitos %>%
 
 ## Nosso progresso
 
-```{r}
+Durante cerca de dois meses os candidatos ao cargo de deputado federal foram contatados para responderem o questionário da Voz Ativa. Nos gráficos seguintes há um sumário do progresso de respostas coletadas através do SurveyMonkey. 
+Cerca de 14% dos candidatos dos quais a plataforma conseguiu contactar respondeu o questionário. Com divulgações efetivas em plataformas e redes sociais a adesão dos candidatos à plataforma continuou crescente até o dia das eleições.
 
- dados %>% 
+### No geral
+```{r}
+dados %>% 
+    filter(recebeu == TRUE) %>%
     count(respondeu) %>% 
     mutate(Respondeu = if_else(respondeu, "Sim", "Não")) %>% 
     mutate(`Respondeu (%)` = n / sum(n) * 100) %>% 
     ggplot(aes(x = Respondeu, y = `Respondeu (%)`, fill = Respondeu)) + 
     geom_col(width = .2) + 
+    geom_text(aes(label = sprintf("%.1f%%", round(n / sum(n) * 100, digits = 2)), vjust=0)) +
     theme(legend.position = "None") + 
-    labs(title = "No geral")
-
-
+    labs(title = "Proporção de respostas recebidas")
 ```
 
 
@@ -111,7 +114,9 @@ dados %>%
 ```
 
 
-### Por UF
+### Por estado
+
+Analisando nosso progresso num contexto de estado vemos a questão de respostas percentuais e absolutas para candidatos em geral e candidatos eleitos. Na visão geral, São Paulo foi o estado onde obtivemos maior sucesso percentual e em nenhum estado não obtivemos respostas. O Espírito Santo, décimo segundo com o maior percentual de respostas, foi o estado com mais candidatos eleitos e que responderam a plataforma Voz Ativa.
 
 ```{r}
 dados %>% 
@@ -125,9 +130,11 @@ dados %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas por UF (em %)"
+        title = "Percentual de respostas por estado"
     )
+```
 
+```{r}
 eleitos %>% 
     count(uf, respondeu) %>% 
     mutate(Respondeu = if_else(respondeu, "Sim", "Não")) %>% 
@@ -139,9 +146,8 @@ eleitos %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas dos Eleitos por UF (em %)"
+        title = "Percentual de respostas de eleitos por estado"
     )
-
 ```
 
 ```{r}
@@ -154,10 +160,12 @@ dados %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas por UF (em absoluto)",
+        title = "Respostas em absoluto por estado",
         y = "Quantidade de candidaturas"
     )
+```
 
+```{r}
 eleitos %>%  
     count(uf, respondeu) %>% group_by(uf) %>% mutate(total = sum(n)) %>% ungroup() %>% 
     mutate(Respondeu = if_else(respondeu, "Sim", "Não")) %>% 
@@ -166,12 +174,15 @@ eleitos %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas dos Eleitos por UF (em absoluto)",
+        title = "Respostas de eleitos em absoluto por estado",
         y = "Quantidade de candidaturas"
     )
 ```
 
+
 ### Por partido
+
+Sob a perspectiva de partido político, é visto que os partidos considerados menores em geral aderiram mais à Voz Ativa do que os tradicionalmente dominantes da câmara como o PSDB.
 
 ```{r}
 dados %>% 
@@ -187,9 +198,11 @@ dados %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas por PARTIDO (em %)"
+        title = "Percentual de respostas por partido"
     )
+```
 
+```{r}
 eleitos %>% 
     count(sg_partido, respondeu) %>% 
     mutate(Respondeu = if_else(respondeu, "Sim", "Não")) %>% 
@@ -203,10 +216,10 @@ eleitos %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas dos Eleitos por PARTIDO (em %)"
+        title = "Percentual de respostas de eleitos por estado"
     )
-
 ```
+
 
 ```{r}
 dados %>% 
@@ -217,10 +230,13 @@ dados %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas por PARTIDO (em absoluto)",
+        title = "Respostas em absoluto por partido",
         y = "Quantidade de candidaturas"
     )
- eleitos %>% 
+```
+
+```{r}
+eleitos %>% 
     count(sg_partido, respondeu) %>%  group_by(sg_partido) %>% mutate(total = sum(n)) %>% ungroup() %>% 
     mutate(Respondeu = if_else(respondeu, "Sim", "Não")) %>% 
     ggplot(aes(x = reorder(sg_partido, total), y = n, fill = Respondeu)) + 
@@ -228,10 +244,12 @@ dados %>%
     coord_flip() + 
     labs(
         x = "",
-        title = "Respostas dos Eleitos por PARTIDO (em absoluto)",
+        title = "Respostas de eleitos em absoluto por partido",
         y = "Quantidade de candidaturas"
     )
 ```
+
+### Relação partidos e estados na Voz Ativa
 
 ```{r fig.width=8}
 dados %>% 
