--- a/reports/a-report.Rmd
+++ b/reports/a-report.Rmd
@@ -78,17 +78,18 @@ dados %>%
 Entre os eleitos, temos bem menos candidaturas que responderam.
 
 ```{r}
+eleitos <- eleitos %>% mutate(reeleicao = ifelse(reeleicao == 1, TRUE, FALSE))
 eleitos %>% 
     summarise(
         `Total de eleitos` = n(),
         `Temos email` = sprintf("%d (%.1f%%)", sum(recebeu), 100* sum(recebeu) / 513),
-        `Responderam` = sprintf("%d (%.1f%%)", sum(respondeu), 100*sum(respondeu) / 513), 
+        `Responderam` = sprintf("%d (%.1f%%)", sum(respondeu), 100*sum(respondeu) / 513),
+        `Tem informações na câmara` =  sprintf("%d (%.1f%%)", sum(reeleicao), 100*sum(reeleicao) / 513)
     ) %>% 
     gather(key = "Número", value = "Valor") %>% 
     knitr::kable()
 
 ```
-
 
 
 
