--- a/reports/a-report.Rmd
+++ b/reports/a-report.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "Voz Ativa: Respostas até agora"
-output:
-    html_document:
-    df_print: paged
+title: 'Voz Ativa: Respostas até agora'
 theme: sandstone
+output:
+  html_document: null
+  pdf_document: default
+  df_print: paged
 ---
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
@@ -69,7 +70,7 @@ dados %>%
     summarise(
         `Total de candidaturas` = n(),
         `Conseguimos email` = sprintf("%d (%.1f%%)", sum(recebeu), 100* sum(recebeu) / n()),
-        `Responderam` = sprintf("%d (%.1f%%)", sum(respondeu), 100*sum(respondeu) / sum(recebeu)), 
+        `Responderam` = sprintf("%d (%.1f%%)", sum(respondeu), 100*sum(respondeu) / sum(recebeu))
     ) %>% 
     gather(key = "Número", value = "Valor") %>% 
     knitr::kable()
@@ -92,9 +93,8 @@ eleitos %>%
 ```
 
 
-
 ```{r}
-  dados %>% 
+dados %>% 
     filter(!is.na(date_created)) %>% 
     select(date_created) %>% 
     arrange(date_created) %>% 
@@ -284,7 +284,9 @@ dados %>%
 
 # Analisando os dados gerados pelo Google Analytics
 
-Com o auxílio do Google Analytics coletamos as informações de tráfego e acessos ao site [www.vozativa.org](www.vozativa.org). Com um tempo médio na página de quase 7 minutos, a plataforma teve 108 mil usuários e 164 mil visualizações. O estado de São Paulo foi a origem da maior parte (38,47%) dos acessos à plataforma, seguido de Minas Gerais (11,07%) e o Rio de Janeiro (8,9%).
+Com o auxílio do Google Analytics coletamos as informações de tráfego e acessos ao site [www.vozativa.org](www.vozativa.org). 
+Considerando o período entre o dia 01 de setembro de 2018 até o dia 28 de janeiro de 2019.
+Com um tempo médio na página de quase 1 minuto e meio, a plataforma teve 111.194 usuários e quase 175 mil visualizações. O estado de São Paulo foi a origem da maior parte (38,44%) dos acessos à plataforma, seguido de Minas Gerais (11,08%) e do Rio de Janeiro (8,91%).
 
 ### Quantidade de usuários por região
 
